# KauriTestTask

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Procfile  README.md  docker-compose.yml  push_and_deploy_gcloud.sh  pyproject.toml  run.py
.github/workflows/: build_and_push.yml  deploy.yml  deploy_dokku.yml
app/: dependencies.py
app/routers/: explorer.py  root.py
app/schemas/: explorer.py  root.py
app/scrapers/: __init__.py  binance.py  kraken.py
app/utils/: base_router.py  explorer.py
currencyexplorer/: __init__.py  main.py  settings.py
currencyexplorer/core/exchangers_scraping/: __init__.py  abstract_exchanger_scraper.py  exceptions.py  scraping_manager.py  storage_backends.py
