[tool.poetry]
name = "kauri-currencyexplorer-test-task"
version = "0.0.10"
description = "Test task for Kauri employment process"
authors = ["WATHIPOL"]

[tool.poetry.dependencies]
python = "^3.11"
email-validator = "^2.0.0"
fastapi = "^0.109.1"
uvicorn = {version="^0.20.0", extras=["standard"]}
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
loguru = "^0.6.0"
click = "*"
pytz = "^2022.1"
python-multipart = "*"
websockets = "*"
"python-binance" = "*"
"httpx" = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"